--- a/css/style.css
+++ b/css/style.css
@@ -1050,6 +1050,7 @@ body {
     margin-bottom: 24px;
     padding: 14px 28px 14px;
     padding-right: 40px;
+    width: 90%;
   }
 
   .pickup-track {
